<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".CreateUserActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin24dp"
        android:text="@string/create_account"
        android:textColor="@color/clrWhite"
        android:textSize="@dimen/size45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/top32dp"
        android:text="@string/string_usernameCreate"
        android:textColor="@color/clrWhite"
        android:textSize="@dimen/size35sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Spinner
        android:id="@+id/spinnerStates"
        android:layout_width="@dimen/w225dp"
        android:layout_height="@dimen/h48dp"
        android:layout_marginTop="@dimen/margin28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/DOB" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="354dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/rbtMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginE10dp"
            android:layout_weight="1"
            android:text="@string/male"
            android:textColor="@color/clrWhite"
            android:textSize="@dimen/size35sp" />

        <RadioButton
            android:id="@+id/rbtFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginE10dp"

            android:layout_weight="1"
            android:text="@string/female"
            android:textColor="@color/clrWhite"
            android:textSize="@dimen/size35sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/top32dp"
        android:text="@string/string_genderCreate"
        android:textColor="@color/clrWhite"
        android:textSize="@dimen/size35sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="@dimen/w314"
        android:layout_height="@dimen/h48dp"
        android:layout_marginTop="@dimen/margin24dp"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textColor="@color/clrWhite"
        android:textSize="@dimen/size20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/margin28dp"
        android:text="@string/string_locationCreate"
        android:textColor="@color/clrWhite"
        android:textSize="@dimen/size35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DOB" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="@dimen/w307dp"
        android:layout_height="@dimen/h48dp"
        android:layout_marginTop="@dimen/top32dp"

        android:ems="10"
        android:hint="@string/enter_your_username"
        android:inputType="textPersonName"
        android:textColor="@color/clrWhite"
        android:textSize="@dimen/size20sp"
        android:textStyle="bold"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/t36dp"
        android:text="@string/string_dobCreate"
        android:textColor="@color/clrWhite"
        android:textSize="@dimen/size35sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/margin24dp"
        android:text="@string/string_passwordCreate"
        android:textColor="@color/clrWhite"
        android:textSize="@dimen/size35sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin28dp"
        android:text="@string/create_account"
        android:textSize="@dimen/size20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbAgreeCreateAccount" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fltBackBtn"
        android:layout_width="@dimen/m64dp"
        android:layout_height="@dimen/h61dp"
        android:layout_marginTop="@dimen/margin24dp"
        android:clickable="true"
        app:backgroundTint="@color/colorPickItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <CheckBox
        android:id="@+id/cbAcknowledge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin28dp"
        android:text="@string/i_acknowledge_the_covid_19_cases_on_this_app_is_updated_in_real_time"
        android:textColor="@color/clrWhite"
        android:textSize="@dimen/size20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />

    <CheckBox
        android:id="@+id/cbAgreeCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin24dp"
        android:text="@string/i_agree_to_create_account_on_this_app"
        android:textColor="@color/clrWhite"
        android:textSize="@dimen/size20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbAcknowledge" />

    <TextView
        android:id="@+id/DOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/margin28dp"
        android:text=""

        android:textColor="@color/clrWhite"
        android:textSize="@dimen/size35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/btnChooseDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/t36dp"
        android:text="@string/pick_your_birthday"
        android:textSize="@dimen/size20sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/margin28dp"
        android:text="@string/family_member"
        android:textColor="@color/clrWhite"
        android:textSize="@dimen/size35sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/numberFM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin28dp"
        android:textColor="@color/clrWhite"
        android:textSize="@dimen/size35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/spinnerStates" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="@dimen/w500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin28dp"
        android:padding="@dimen/marginE10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

</androidx.constraintlayout.widget.ConstraintLayout>