<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/ivDetail"
        android:layout_width="@dimen/size200dp"
        android:layout_height="@dimen/size200dp"
        android:layout_marginTop="@dimen/margin28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvStateNameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/m40dp"
        android:text="@string/state_name"
        android:textColor="@color/clrWhite"
        android:textSize="@dimen/size45sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDetail" />

    <TextView
        android:id="@+id/detailTCase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/margin28dp"
        android:text="@string/total_cases"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/size45sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStateNameDetail" />

    <TextView
        android:id="@+id/detailTD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/margin28dp"
        android:text="@string/total_deaths"
        android:textColor="@color/colorGreen"
        android:textSize="@dimen/size45sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailTCase" />

    <TextView
        android:id="@+id/detailTodayCase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/margin28dp"
        android:text="@string/today_cases"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/size45sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailTD" />

    <TextView
        android:id="@+id/detailTodayDeath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin28dp"
        android:text="@string/today_deaths"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/size45sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailTodayCase" />
</androidx.constraintlayout.widget.ConstraintLayout>