<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="@dimen/w240dp">

    <ImageView
        android:id="@+id/FAVImage"
        android:layout_width="@dimen/size200dp"
        android:layout_height="@dimen/size200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.25"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/FAVStateName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/state_name"
        android:textColor="@color/clrWhite"
        android:textSize="@dimen/size35sp"
        android:textStyle="bold|italic"

        app:layout_constraintBottom_toBottomOf="@+id/FAVImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toEndOf="@+id/FAVImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin28dp"

        android:text="@string/total_cases"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/size35sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toEndOf="@+id/FAVImage"
        app:layout_constraintTop_toBottomOf="@+id/FAVStateName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin28dp"

        android:text="@string/total_deaths"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/size35sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toEndOf="@+id/FAVImage"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/FAVStateTotalCase"
        android:layout_width="@dimen/w300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin28dp"

        android:textColor="@color/colorRed"
        android:textSize="@dimen/size35sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/FAVStateName" />

    <TextView
        android:id="@+id/FAVStateTotalDeath"
        android:layout_width="@dimen/w280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin28dp"

        android:textColor="@color/colorGray"
        android:textSize="@dimen/size35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>